colors changed less comes to rescue

--- a/static/initialPage/css/initialPageAccordian.less
+++ b/static/initialPage/css/initialPageAccordian.less
@@ -1,5 +1,6 @@
 @backgroundColor:#D2D2D2;
-@highlightColor:#D2527F;
+@highlightColor:#30aadc;
+@highlightColor:#08ECFF;
 @baseFont:'Oxygen', sans-serif;
 
 body{
