--- a/static/navbar/initialPageNavbar/css/initialPageNavbar.less
+++ b/static/navbar/initialPageNavbar/css/initialPageNavbar.less
@@ -1,6 +1,7 @@
 @backgroundColor:#D2D2D2;
 @navFontColor:#908F8F;
-@highlightColor:#D2527F;
+@highlightColor:#30aadc;
+@highlightColor:#08ECFF;
 @baseFont:'Oxygen', sans-serif;
 
 @media (min-width:768px)
@@ -41,7 +42,7 @@
 
 					a:hover{
 						color: darken(@navFontColor,20%);
-						border-bottom: 2px solid @highlightColor;
+						border-bottom: 3px solid @highlightColor;
 					}
 				}
 			}
