--- a/templates/initialPage/initialPageAccordian.html
+++ b/templates/initialPage/initialPageAccordian.html
@@ -77,13 +77,13 @@
 						<a href="jwellery" class="jwellery">Jwellery</a>
 					</li>
 					<li>
-						<a href="#" class="solitares">Solitares</a>
+						<a href="solitaires" class="solitaires">Solitaires</a>
 					</li>
 					<li>
-						<a href="#" class="goldCoins">Gold Coins</a>
+						<a href="goldCoins" class="goldCoins">Gold Coins</a>
 					</li>
 					<li>
-						<a href="#" class="collections">Collections</a>
+						<a href="collections" class="collections">Collections</a>
 					</li>
 				</ul>
 			</div>
