--- a/templates/navbar/navbar.html
+++ b/templates/navbar/navbar.html
@@ -19,9 +19,9 @@
 					<li class="jwellery">Jwellery</li>
 					<div class="data jwellery"></div>
 				</div>
-				<div class="list solitares">
-					<li class="solitares">Solitares</li>
-					<div class="data solitares"></div>
+				<div class="list solitaires">
+					<li class="solitaires">Solitaires</li>
+					<div class="data solitaires"></div>
 				</div>
 				<div class="list goldCoins">
 					<li class="goldCoins">Gold Coins</li>
@@ -105,9 +105,9 @@
 							<li class="jwellwey">Jwellery</li>
 							<div class="data jwellery">Jwellery</div>
 						</div>
-						<div class="listOuter solitares">
-							<li class="solitares">Solitares</li>
-							<div class="data solitares">Solitares</div>
+						<div class="listOuter solitaires">
+							<li class="solitaires">Solitares</li>
+							<div class="data solitaires">Solitares</div>
 						</div>
 						<div class="listOuter goldCoins">
 							<li class="goldCoins">Gold Coins</li>
