--- a/static/navbar/navbar/css/navbar.less
+++ b/static/navbar/navbar/css/navbar.less
@@ -1,9 +1,12 @@
 @backgroundColor:#D2D2D2;
 @navFontColor:#908F8F;
-@highlightColor:#D2527F;
+@highlightColor:#30aadc;
+@highlightColor:#08ECFF;
 @baseFont:'Oxygen', sans-serif;
 @font1:'Source Sans Pro', sans-serif;
 
+////@highlightColor:darken(skyblue,20%);
+//#D2527F
 ::selection{
 	background-color: rgba(210, 82, 127, 0.15)
 }
@@ -83,7 +86,7 @@
 							border-bottom-right-radius: 2px;
 						}
 						
-						div.data.solitares{
+						div.data.solitaires{
 							display: none;
 							position: absolute;
 							top: 100%;
@@ -406,7 +409,7 @@
 							border-bottom-right-radius: 2px;
 						}
 						
-						div.data.solitares{
+						div.data.solitaires{
 							display: none;
 							position: absolute;
 							top: 100%;
@@ -672,7 +675,7 @@
 	  	-ms-user-select: none;      
 	  	user-select: none;
 		cursor: default;
-		
+		background-color: lighten(@backgroundColor,15%);
 		.navRibbon{
 			width: 100%;
 			height: 3px;
