Done Something async

--- a/templates/navbar/navbar.html
+++ b/templates/navbar/navbar.html
@@ -37,7 +37,7 @@
 				</div>
 			</ul>
 		</div>
-		
+
 		<div class="dock">
 			<ul class="list-unstyled">
 				<li>
@@ -55,7 +55,7 @@
 				<li>
 					<div class="wishlist circle">
 						<div class="supp"></div>
-						<div class="toolTip cart">
+						<div class="toolTip wishlist">
 							<div class="tip">
 							</div>
 							<div class="tipBox">
@@ -67,7 +67,7 @@
 				<li>
 					<div class="search circle">
 						<div class="supp"></div>
-						<div class="toolTip cart">
+						<div class="toolTip search">
 							<div class="tip">
 							</div>
 							<div class="tipBox">
@@ -79,7 +79,7 @@
 				<li>
 					<div class="account circle">
 						<div class="supp"></div>
-						<div class="toolTip cart">
+						<div class="toolTip account">
 							<div class="tip">
 							</div>
 							<div class="tipBox">
@@ -87,7 +87,7 @@
 						</div>
 					</div>
 					<i class="fa fa-user"></i>
-					
+
 				</li>
 				<li class="more">
 					<div class="more">
@@ -96,7 +96,7 @@
 				</li>
 			</ul>
 		</div>
-		
+
 		<div class="sm-navPannel">
 			<div class="pannelWrapper">
 				<div class="sidePannel">
@@ -130,4 +130,5 @@
 	</div>
 </div>
 
+<script type="text/javascript" src={% static "navbar/navbar/js/loginFormLoad.js" %}></script>
 <script type="text/javascript" src={% static "navbar/navbar/js/navbar.js" %}></script>
