--- a/templates/product_detail/product_detail.html
+++ b/templates/product_detail/product_detail.html
@@ -12,6 +12,12 @@
 		<link rel="stylesheet/less" type="text/css" href={% static "product_detail/css/product_detail.less" %}>
 		<link href='http://fonts.googleapis.com/css?family=Oxygen:400,300' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+  <script>
+  $(function() {
+    $( "#accordion" ).accordion();
+  });
+  </script>
 	</head>
 	<body>
 		<div class="page">
@@ -22,7 +28,7 @@
                     <div class="inner_lhs">
           	            <div class="image_div">
           		           <img src="" alt="jewellery_image">
-        	            </div>
+        	            </div> 
                     </div>
 
                    <div class="inner_rhs">
@@ -32,10 +38,10 @@
         			        Twinkle Solitaire Earrings
         			      </h3> 
         		        </div>
-        		     <div class="ribbon"></div>
+        		     <div class="ribbon"></div> 
         		        <div id="product_price">
         		           <h2>
-        			        Rs. 8,129
+        			        Rs {{total_charges|floatformat:"0"}}
         			       </h2> 
         		        </div>
         		     <div class="ribbon"></div>
@@ -118,15 +124,81 @@
                       <td>17.05 mm</td>
                     </tr>
                  </table>
-
             </div>
+            <div id="basic_diamond_details">
+                <h4>
+                     Diamond Details
+                 </h4>
+                 <table class="diamond_details" cellspacing="0">
+                    
+                    <tr>
+                       <td class="left_row">Total Diamond Weight</td> 
+                       <td>60</td>
+                    </tr>
+                    <tr>
+                      <td class="left_row">Diamond Quality</td>
+                      <td>IJ-SI</td>
+                    </tr>
+                    
+                 </table>
+            </div>
+
+            <div id="basic_gemstone_details">
+                <h4>
+                     Gemstone Details
+                 </h4>
+                 <table class="gemstone_details" cellspacing="0">
+                    <!-- Apply for loop for all the gemstones types-->
+                    <tr>
+                       <td class="left_row">White Topaz</td> 
+                    </tr>
+                    
+                 </table>
+            </div>
+              
 
          </div>        
        <div id="query_form">
             
         </div>
-    </div>    
+    </div>
 
+    <div class="divider"></div>   
+    <div id="information">
+      <div id="about_us" class="info">
+          
+         <ul>
+           <li><h4>Know Aura</h4></li> 
+           <li><a>About Us</a></li>
+           <li><a>Privacy Policy</a></li>
+         </ul>
+      </div>
+      <div id="customer_service" class="info">
+        <ul>
+           <li><h4>Customer Service</h4></li>
+           <li><a>Payment options</a></li>
+           <li><a>Return Policy</a></li>
+           <li><a>Shipping Policy</a></li>
+           <li><a>Terms and Conditions</a></li>
+           <li><a>Frequently Asked Questions</a></li>
+         </ul>
+      </div>
+      
+      <div id="visit_us" class="info">
+        <ul>
+           <li><h4>Visit Us</h4></li>
+         </ul>  
+      </div>
+
+      <div id="contact_us" class="info">
+        <ul>
+          <li><h4>Contact Us</h4></li>
+          <li>1800-102-0103 (Toll Free)</li>
+          <li>+91-44-4293-5000</li>
+          <li>contactus@aura.com</li>
+        </ul>
+      </div>
+    </div>
 		</div>
 		<div class="rough"></div>
 		<script src={% static "less.js-master/dist/less.js" %} type="text/javascript"></script>
