--- a/static/product_detail/css/product_detail.less
+++ b/static/product_detail/css/product_detail.less
@@ -158,7 +158,8 @@ body{
            #outer2
            {
                width:100%;
-               height:400px;
+               //height:400px;
+               height:100%;
                background-color:darken(@backgroundColor,1%);
                margin-top:0.9%;
                
@@ -448,7 +449,8 @@ body{
 		   #outer2
            {
                width:100%;
-               height:400px;
+               //height:400px;
+               height:100%;
                background-color:darken(@backgroundColor,1%);
                margin-top:0.9%;
                
@@ -738,7 +740,8 @@ body{
 		   #outer2
            {
                width:100%;
-               height:400px;
+               height:100%;
+               //height:400px;
                background-color:darken(@backgroundColor,1%);
                margin-top:0.9%;
                
@@ -1029,7 +1032,8 @@ body{
 		   #outer2
            {
                width:100%;
-               height:400px;
+               //height:400px;
+               height:100%;
                background-color:darken(@backgroundColor,1%);
                margin-top:0.9%;
                
