--- a/templates/product_detail/product_detail.html
+++ b/templates/product_detail/product_detail.html
@@ -1,80 +1,77 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 {% load staticfiles %}
 <html>
-	<head lang="en">
-		<title>Aura | Jewellery</title>
-		<meta charset="utf-8">
-    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    	<meta name="viewport" content="width=device-width, initial-scale=1">
-		<script type="text/javascript" src={% static "jQuery/jquery-1.11.2.min.js" %}></script>
-		<link rel="stylesheet" type="text/css" href={% static "fontAwsome/font-awesome-4.3.0/css/font-awesome.min.css" %}>
-		<link rel="stylesheet" type="text/css" href={% static "bootstrap/bootstrap-3.3.5-dist/css/bootstrap.min.css" %}>
-		<link rel="stylesheet/less" type="text/css" href={% static "product_detail/css/product_detail.less" %}>
-		<link href='http://fonts.googleapis.com/css?family=Oxygen:400,300' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400' rel='stylesheet' type='text/css'>
+  <head lang="en">
+    <title>Aura | Jewellery</title>
+    <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="text/javascript" src={% static "jQuery/jquery-1.11.2.min.js" %}></script>
+    <link rel="stylesheet" type="text/css" href={% static "fontAwsome/font-awesome-4.3.0/css/font-awesome.min.css" %}>
+    <link rel="stylesheet" type="text/css" href={% static "bootstrap/bootstrap-3.3.5-dist/css/bootstrap.min.css" %}>
+    <link rel="stylesheet/less" type="text/css" href={% static "product_detail/css/product_detail.less" %}>
+    <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
-  <script>
-  $(function() {
-    $( "#accordion" ).accordion();
-  });
-  </script>
-	</head>
-	<body>
-		<div class="page">
-			{% include "navbar/navbar.html" %}
-			<!--Never Use Class .navBar -->
-	        <div class="main_content">
+ 
+  </head>
+  <body>
+    <div class="page">
+      {% include "navbar/navbar.html" %}
+      <!--Never Use Class .navBar -->
+          <div class="main_content">
                 <div class="outer">
                     <div class="inner_lhs">
-          	            <div class="image_div">
-          		           <img src="" alt="jewellery_image">
-        	            </div> 
+                        <div class="image_div">
+                         <img src="" alt="jewellery_image">
+                      </div> 
                     </div>
 
                    <div class="inner_rhs">
-        	        <div class="inner_detail_rhs">
-        		        <div id="product_name">
-        		          <h3>
-        			        Twinkle Solitaire Earrings
-        			      </h3> 
-        		        </div>
-        		     <div class="ribbon"></div> 
-        		        <div id="product_price">
-        		           <h2>
-        			        Rs {{total_charges|floatformat:"0"}}
-        			       </h2> 
-        		        </div>
-        		     <div class="ribbon"></div>
-       <!-- For loop for  product variants--> 		
-        	     	 <div id="row variant_row">
-        	     	     <div>
-        	     	     	<img src="">
-        	     	     	<h5>Diamond</h5>
-        	     	     </div>
-        		     </div>
-        		     <div class="ribbon"></div>
-        		     <div id="features">
-        			    <ul>
-        			    	<li>
-        			    	   <h6>30 Day MoneyBack	</h6>
-        			    	</li>
-        			    	<li>
-        			    	   <h6>Life Time Exchange</h6>
-        			    	</li>
-        			    	<li>
-        			    	   <h6>Certified</h6>
-        			    	</li>
-        			    </ul> 
-        	 	     </div>
+                  <div class="inner_detail_rhs">
+                    <div id="product_name">
+                      <h3>
+                      <!-- Twinkle Solitaire Earrings -->
+                       Aura {{metal_type}} {{product_type}} {{product_category}}
+                    </h3> 
+                    </div>
+                 <div class="ribbon"></div> 
+                    <div id="product_price">
+                       <h2>
+                      Rs {{total_charges|floatformat:"0"}}
+                     </h2> 
+                    </div>
+                 <div class="ribbon"></div>
+       <!-- For loop for  product variants-->     
+                 <div id="row variant_row">
+                     <div>
+                      Set in {{metal_karat}} Kt {{metal_type}} ({{metal_weight|floatformat:"2"}} gms) {% if diamond_data %} with Diamonds ({{diamond_weight|floatformat:"2"}} Ct) {% endif %} 
+                      <div><a href="#outer2">See more product & price details </a></div>
+                     </div>
+                 </div>
+                 <div class="ribbon"></div>
+                 <div id="features">
+                  <ul>
+                    <li>
+                       <h6>30 Day MoneyBack </h6>
+                    </li>
+                    <li>
+                       <h6>Life Time Exchange</h6>
+                    </li>
+                    <li>
+                       <h6>Certified</h6>
+                    </li>
+                  </ul> 
+                 </div>
 
-        		     <div class="ribbon"></div>
-        		     <div id="button_id">
-        		        <div>
-        			        <button>Buy Now</button>
-        			    </div>
-        			     <div id="call_us">or call us at 9999999999</div> 
-        		    </div>
-        		    <div class="ribbon"></div>
+                 <div class="ribbon"></div>
+                 <div id="button_id">
+                    <div>
+                      <button>Buy Now</button>
+                  </div>
+                   <div id="call_us">or call us at 9999999999</div> 
+                </div>
+                <div class="ribbon"></div>
                     <div id="go_social">
                         <ul id="go_social_list">
                             <li id="ene">
@@ -88,8 +85,8 @@
                             </li>
                         </ul>
                     </div>
-        	</div>
-        </div>	
+          </div>
+        </div>  
     </div>
     
     <div class="divider"></div>
@@ -109,11 +106,11 @@
                     </tr>
                     <tr>
                       <td class="left_row">Metal/Purity</td>
-                      <td>18 Kt Yellow Gold</td>
+                      <td>{{metal_karat}} Kt {{metal_type}}</td>
                     </tr>
                     <tr>
                       <td class="left_row">Approximate Metal Weight</td>
-                      <td>3.36 gms</td>
+                      <td>{{metal_weight|floatformat:"3"}} gms</td>
                     </tr>
                     <tr>
                        <td class="left_row">Height</td>
@@ -125,24 +122,35 @@
                     </tr>
                  </table>
             </div>
-            <div id="basic_diamond_details">
-                <h4>
-                     Diamond Details
-                 </h4>
-                 <table class="diamond_details" cellspacing="0">
-                    
-                    <tr>
-                       <td class="left_row">Total Diamond Weight</td> 
-                       <td>60</td>
-                    </tr>
-                    <tr>
-                      <td class="left_row">Diamond Quality</td>
-                      <td>IJ-SI</td>
-                    </tr>
-                    
-                 </table>
-            </div>
+             {% if diamond_data %}     
+                  <div id="basic_diamond_details">
+                      <h4>
+                           Diamond Details
+                       </h4>
+                       <table class="diamond_details" cellspacing="0">
+                          <tr>
+                            <td class="left_row">Shape</td>
+                            <td>Weight</td>
+                            <td>Quality</td>
+                          </tr>
+                          {% for i in diamond_data %}
+                              <tr>
+                                <td class="left_row">{{i.diamond_shape}}</td>
+                                <td>{{i.weight_of_diamonds|floatformat:"2"}} ct</td>
+                                <td>{{i.diamond_color}}-{{i.diamond_clarity}}</td>
+                              </tr>
+                          {% endfor %}    
+                          <tr>
+                             <td class="left_row">Total Diamond Weight</td> 
+                             <td>{{diamond_weight|floatformat:"2"}} ct</td>
+                             <td></td>
+                          </tr>
+                          
+                       </table>
+                  </div>
+             {% endif %}
 
+            {% if gemstone_data %}
             <div id="basic_gemstone_details">
                 <h4>
                      Gemstone Details
@@ -150,12 +158,18 @@
                  <table class="gemstone_details" cellspacing="0">
                     <!-- Apply for loop for all the gemstones types-->
                     <tr>
-                       <td class="left_row">White Topaz</td> 
+                      <td class="left_row">Gemstone</td>
+                      <td>Weight</td>
                     </tr>
-                    
+                    {% for i in gemstone_data %}
+                      <tr>
+                         <td class="left_row">{{ i.gemstone }}</td> 
+                         <td>{{ i.weight_of_gemstones|floatformat:"2"}} ct</td>
+                      </tr>
+                     {% endfor %}
                  </table>
             </div>
-              
+            {% endif %}  
 
          </div>        
        <div id="query_form">
@@ -199,10 +213,10 @@
         </ul>
       </div>
     </div>
-		</div>
-		<div class="rough"></div>
-		<script src={% static "less.js-master/dist/less.js" %} type="text/javascript"></script>
-		<script type="text/javascript" src={% static "jQuery/jquery-1.11.2.min.js" %}></script>
-		<script type="text/javaascript" src={% static "bootstrap/bootstrap-3.3.5-dist/js/bootstrap.min.js" %}></script>
-	</body>
+    </div>
+    <div class="rough"></div>
+    <script src={% static "less.js-master/dist/less.js" %} type="text/javascript"></script>
+    <script type="text/javascript" src={% static "jQuery/jquery-1.11.2.min.js" %}></script>
+    <script type="text/javaascript" src={% static "bootstrap/bootstrap-3.3.5-dist/js/bootstrap.min.js" %}></script>
+  </body>
 </html>
