--- a/templates/product_detail/product_detail.html
+++ b/templates/product_detail/product_detail.html
@@ -23,7 +23,9 @@
                 <div class="outer">
                     <div class="inner_lhs">
                         <div class="image_div">
-                         <img src="" alt="jewellery_image">
+                            {% for i in image_data %}
+                              <img src="{{i.image.url}}" alt="jewellery_image">
+                            {% endfor %}  
                       </div> 
                     </div>
 
@@ -217,6 +219,24 @@
     <div class="rough"></div>
     <script src={% static "less.js-master/dist/less.js" %} type="text/javascript"></script>
     <script type="text/javascript" src={% static "jQuery/jquery-1.11.2.min.js" %}></script>
-    <script type="text/javaascript" src={% static "bootstrap/bootstrap-3.3.5-dist/js/bootstrap.min.js" %}></script>
+    <script type="text/javaascript" src={% static "bootstrap/bootstrap-3.3.5-dist/js/bootstrap.min.js" %}>
+    </script>
+    <script type="text/javascript">
+    $(function() {
+  $('a[href*=#]:not([href=#])').click(function() {
+    if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+      var target = $(this.hash);
+      target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+      if (target.length) {
+        $('html,body').animate({
+          scrollTop: target.offset().top
+        }, 1000);
+        return false;
+      }
+    }
+  });
+});
+
+    </script>
   </body>
 </html>
