Sorry For Delay Tanvi

--- a/templates/jwelleryPage/jwelleryPage.html
+++ b/templates/jwelleryPage/jwelleryPage.html
@@ -19,72 +19,72 @@
 			<!--Never Use Class .navBar -->
 			<div class="mainContent">
 				<div class="wrapper">
-					
-					<a href={% url 'product' %}?identifier=ringProduct>
+
+					<a href={% url 'product' %}?identifier=ring>
 						<div class="rings product">
 							<div class="image">
 							</div>
 							<h2>Rings</h2>
 						</div>
 					</a>
-					
-					<a href={% url 'product' %}?identifier=earringProduct>
+
+					<a href={% url 'product' %}?identifier=earring>
 						<div class="earrings product">
 							<div class="image">
 							</div>
 							<h2>Earrings</h2>
 						</div>
 					</a>
-					
-					<a href={% url 'product' %}?identifier=pendantProduct>
+
+					<a href={% url 'product' %}?identifier=pendant>
 						<div class="pendants product">
 							<div class="image">
 							</div>
 							<h2>Pendants</h2>
 						</div>
 					</a>
-					
-					<a href={% url 'product' %}?identifier=bangleProduct>
+
+					<a href={% url 'product' %}?identifier=bangle>
 						<div class="bangles product">
 							<div class="image">
 							</div>
 							<h2>Bangles</h2>
 						</div>
 					</a>
-					
-					<a href={% url 'product' %}?identifier=braceletProduct>
+
+					<a href={% url 'product' %}?identifier=bracelet>
 						<div class="bracelets product">
 							<div class="image">
 							</div>
 							<h2>Bracelets</h2>
 						</div>
 					</a>
-					
-					<a href={% url 'product' %}?identifier=necklaceProduct>
+
+					<a href={% url 'product' %}?identifier=necklace>
 						<div class="necklaces product">
 							<div class="image">
 							</div>
 							<h2>Necklaces</h2>
 						</div>
 					</a>
-					
-					<a href={% url 'product' %}?identifier=nosePinProduct>
+
+					<a href={% url 'product' %}?identifier=nosepin>
 						<div class="nosePins product">
 							<div class="image">
 							</div>
 							<h2>Nose Pins</h2>
 						</div>
 					</a>
-					
-					<a href={% url 'product' %}?identifier=mangalsutraProduct>
+
+					<a href={% url 'product' %}?identifier=mangalsutra>
 						<div class="mangalsutras product">
 							<div class="image">
 							</div>
 							<h2>Mangalsutras</h2>
 						</div>
 					</a>
-					
-					<a href={% url 'product' %}?identifier=chainProduct>
+
+					<a href={% url 'product' %}?identifier=chains>
 						<div class="chains product">
 							<div class="image">
 							</div>
