--- a/templates/product_detail/product_detail.html
+++ b/templates/product_detail/product_detail.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
 {% load staticfiles %}
 <html>
-  <head lang="en">
+  <head lang="en"> 
     <title>Aura | Jewellery</title>
     <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -175,7 +175,9 @@
 
          </div>        
        <div id="query_form">
-            
+            <div id="query">
+              
+            </div>
         </div>
     </div>
 
